TEST_PROGRAMS/INVALID/11/test13.go
// You can edit this code!
// Click here and start typing.
package main

import "fmt"
func fool (int, int) int {return 1}
func add  (a,b int) int{
	return (a+b)
	}

func main() {
	fmt.Println(add(1.0,2))
}
